[package]
name = "image-creator"
version = "0.1.0"
authors = ["Alexandre Roulin <alexandre.roulin@pianoctal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageproc = "0.22.0"
csv = "1.1.5"
convert_case = "0.1.0"
lazy_static = "1.4.0"
image = "0.23.12"
rusttype = "0.9.2"